# wasmCloud-contrib

./: CODEOWNERS  README.md
.github/workflows/: secrets-kubernetes.yml  secrets-vault-chart.yml  secrets-vault.yml
charts/wasmcloud/: Chart.yaml  values.yaml
charts/wasmcloud/charts/: wadm-0.2.5.tgz  wasmcloud-operator-0.1.5.tgz
components/moonbit/http-hello-world/: .gitignore  README.md  build.sh  moon.mod.json  wadm.yaml  wasmcloud.toml
components/moonbit/http-hello-world/ffi/: top.mbt
components/moonbit/http-hello-world/wit/: world.wit
demo/: Makefile  README.md  go.mod  go.sum  wadm.yaml
demo/components/image-analyzer/: Cargo.toml  wasmcloud.toml
demo/components/image-analyzer/src/: lib.rs
demo/components/image-analyzer/wit/: deps.toml
demo/components/image-processor/: Cargo.toml  README.md  wasmcloud.toml
demo/components/image-processor/src/: lib.rs  objstore.rs
demo/components/image-processor/wit/: deps.toml  world.wit
demo/components/task-manager/: main.go  tasks.sql  wasmcloud.toml
demo/components/task-manager/wit/: deps.toml  world.wit
demo/providers/http-router/: .gitignore  analyze.go  eslint.config.js  index.html  main.go  package-lock.json  package.json  process.go  provider.go  serve.go  statistics.go  tailwind.config.ts  tasks.go  tsconfig.app.json  wasmcloud.toml
demo/providers/http-router/bindings/: server.wrpc.go
demo/providers/http-router/src/: App.tsx  main.tsx  style.css
demo/providers/http-router/static/: index.html
demo/providers/http-router/wit/: deps.toml  world.wit
deploy/akamai/: README.md  k8s.tf  main.tf  vars.tf
deploy/akamai/k8s/: helm-nats-values.yml  helm-wadm-values.yml  wasmcloud-host.yml
deploy/baremetal/: nats-leaf.conf  nats-leaf.service  wasmcloud-host.env  wasmcloud-host.service
deploy/ecs-fargate/: README.md  ecs.tf  hello-world-wadm.yaml  iam.tf  logs.tf  nats.tf  network.tf  provider.tf  variables.tf  wadm.tf  wasmcloud-ingress.tf  wasmcloud-workers.tf
deploy/k8s/: README.md
deploy/k8s/kustomize/: README.md
deploy/k8s/kustomize/scripts/: kind-cluster.sh  update-helm.sh
k8s/kustomize/: README.md
k8s/kustomize/deploy/apps/: wadm.yaml
k8s/kustomize/deploy/base/: kustomization.yaml  nats-values.yaml
k8s/kustomize/deploy/dev/: ingress.yaml  wasmcloud-host-config.yaml
k8s/kustomize/scripts/: kind-cluster.sh  update-helm.sh
secrets/secrets-kubernetes/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
secrets/secrets-vault/: .dockerignore  Cargo.toml  Dockerfile  README.md
secrets/secrets-vault/charts/secrets-vault/: .helmignore  Chart.yaml  values.yaml
secrets/secrets-vault/charts/secrets-vault/ci/: ct.yaml  nats.yaml
secrets/secrets-vault/charts/secrets-vault/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
secrets/secrets-vault/charts/wasmcloud-secrets-vault/: Chart.yaml
secrets/secrets-vault/charts/wasmcloud-secrets-vault/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
secrets/secrets-vault/src/: jwk.rs  jwks.rs  lib.rs  main.rs
secrets/secrets-vault/tests/: integration.rs
(+102 files in other folders)
